--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 
 version history of Any::Daemon
 
+version 0.12: Mon Apr 18 13:55:23 CEST 2011
+	- panic when the child dies with run-time program errors.
+	- added example
+
 version 0.11: Mon Mar 21 16:46:45 CET 2011
 	- use $EUID and $EGID to change user/group, not setuid/setgid
 	- change EUID only after changing EGID
