distribution Any-Daemon-0.94.tar.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,14 @@
 
 version history of Any::Daemon
 
+version 0.94: Mon Mar 10 16:12:13 CET 2014
+
+	Improvements:
+	- changed documentation style.
+	- re-seed the pseudo number generator per process (see perldoc -f srand)
+
 version 0.93: Sun Jan  5 17:31:48 CET 2014
+
 	Changes:
 	- move to Log::Report 1.0, only light form required.
 
@@ -11,6 +18,7 @@ version 0.93: Sun Jan  5 17:31:48 CET 2014
 	- ownership of workdir to runtime user.
 
 version 0.92: Tue Oct 15 12:22:13 CEST 2013
+
 	Fixes:
 	- do not complain at close when there is no $pidfn
 
