--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
 
 version 0.96:
 
+	Fixes:
+	- user/group change only happened when both user and group needed
+	  to be changed.
+
 	Improvements:
 	- add accessor pidFilename
 	- besides CODEs refs, most parameters now also support a method name
